# sensirion-scd4x

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml  sensirion_i2c_hal.c
examples/demo/: CMakeLists.txt
examples/demo/main/: CMakeLists.txt  sensirion-scd4x-demo.c
include/: sensirion_i2c_hal.h
